# b-em

./: CMakeLists.txt  vcpkg.json
.github/workflows/: cmake.yml  linux-ci.yml
src/: CMakeLists.txt  b-em.h  gui-allegro.c  hdfmt.c  main.c  sdf-acc.c  vdfs.c  win.c
